# test-uv-project

./: .gitignore  AGENT_README.md  CDK_README.md  DEPLOYMENT_GUIDE.md  README.md  app.py  cdk.json  main.py  pyproject.toml  run_coffee_extractor.py
agents/coffee_extractor/: __init__.py  agent.py  logging_config.py  models.py  prompts.py  tools.py
cdk/: coffee_bean_stack.py  config.py  hello_world_stack.py
config/: __init__.py  settings.py
lambda_functions/hello_world/: handler.py
models/: __init__.py  coffee_bean.py
scripts/: create_tables.py  deploy.ps1  deploy.sh
services/: __init__.py  coffee_service.py
tests/: test_coffee_bean.py
