[project]
name = "test-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.233.0",
    "aws-lambda-powertools>=3.24.0",
    "bedrock-agentcore>=1.1.3",
    "boto3>=1.42.24",
    "constructs>=10.4.4",
    "pillow>=11.1.0",
    "pynamodb>=6.1.0",
    "strands-agents>=1.21.0",
]

[project.optional-dependencies]
network = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
lint = [
    "ruff>=0.14.10",
]
